# indi

./: CMakeLists.txt  configure_cmake_win32.sh  drivers.xml
drivers/: CMakeLists.txt
drivers/agent/: CMakeLists.txt
drivers/alpaca/: CMakeLists.txt
drivers/auxiliary/: CMakeLists.txt
drivers/ccd/: CMakeLists.txt
drivers/dome/: CMakeLists.txt
drivers/filter_wheel/: CMakeLists.txt
drivers/focuser/: CMakeLists.txt
drivers/io/: CMakeLists.txt
drivers/receiver/: CMakeLists.txt
drivers/rotator/: CMakeLists.txt
drivers/spectrograph/: CMakeLists.txt
drivers/telescope/: CMakeLists.txt
drivers/telescope/origin/: CMakeLists.txt  OriginBackendSimple.cpp  OriginBackendSimple.hpp  indi_origin.cpp  indi_origin.h  indi_origin.xml
drivers/video/: CMakeLists.txt
drivers/weather/: CMakeLists.txt
examples/: CMakeLists.txt
examples/tutorial_eight/: CMakeLists.txt
examples/tutorial_five/: CMakeLists.txt
examples/tutorial_four/: CMakeLists.txt
examples/tutorial_one/: CMakeLists.txt
examples/tutorial_seven/: CMakeLists.txt
examples/tutorial_six/: CMakeLists.txt
examples/tutorial_three/: CMakeLists.txt
examples/tutorial_two/: CMakeLists.txt
indiserver/: CMakeLists.txt
indiserver/libs/libev_win_compat/: ev.h
libs/alignment/: CMakeLists.txt  MathPluginManagement.cpp
libs/dsp/: dsp.h
libs/eventloop/: eventloop.c
libs/hid/: CMakeLists.txt
libs/indibase/: CMakeLists.txt  indi_win_compat.h  indidome.cpp  indidriver.c  indidriverio.c  indidrivermain.c  indilogger.cpp  inditelescope.cpp
libs/indibase/connectionplugins/: connectionserial.cpp  connectiontcp.cpp
libs/indicore/: CMakeLists.txt  indicom.c  indidevapi.c
libs/indidevice/: CMakeLists.txt
test/alignment/: CMakeLists.txt
test/celestrondriver/: CMakeLists.txt
test/core/: CMakeLists.txt
test/drivers/: CMakeLists.txt
test/lx200drivers/: CMakeLists.txt
test/scopesim_helper/: CMakeLists.txt
tools/: CMakeLists.txt  evalINDI.c  getINDIproperty.c  setINDIproperty.c
